# U-CogNet

./: .gitignore  .project_config.json  ADN del Agente.txt  ADN_del_Agente.txt  API_DOCUMENTATION.md  AUTONOMOUS_MULTIMODAL_GATING_FRAMEWORK.md  CHANGELOG.md  COGNITIVE_TETRIS_README.md  DOCUMENTACION_POSTDOCTORAL_ACTUALIZADA.md  Dockerfile  EXPERIMENTAL_RESULTS.md  Ingenieria Inversa.md  MetaMushMind-V1.py  PROJECT_ORGANIZATION_COMPLETE.md  PUSH_COMPLETE.md  Pasos Detallados de Implementacion.md  Planteamiento del Problema.md  Proyecto U-CogNet.txt  README.md  RESEARCH_ROADMAP.md  Registro de Desarrollo Postdoctoral.md  Roadmap de Implementacion.md  SECURITY_README.md  TECHNICAL_PAPER.md  Vista global de la estructura.txt  Vista_global_de_la_estructura.txt  adaptive_gating_controller.py  adaptive_gating_controller_simple.py  advanced_audio_evaluation.py  advanced_cognitive_test.py  advanced_multimodal_cognitive_experiment.py  advanced_multimodal_cognitive_experiment.py.bak  advanced_multimodal_cognitive_experiment_backup.py  advanced_snake_env.py  agi_evaluation_framework.py  analyze_attention_results.py  analyze_video_detections.py  attention_demo.py  attention_optimized_500.py  attention_test_simple.py  (+94 more)
advanced_multimodal_cognitive_results/: cognitive_development_summary.md  experiment_results.json
agi_evaluation_results/: agi_evaluation_20251118_131017.json  agi_readiness_report_20251118_131017.txt
cognitive_evaluation_results/: audio_cognitive_evaluation_20251118_124344.json
cognitive_tetris_demo_results/: demo_session_20251118_135551.json
cognitive_tetris_sessions/: session_0_20251118_140735.json  session_1_20251118_140738.json
complete_integration_results/: complete_integration_results.json  scientific_summary.md
docs/: ADN del Agente.txt  Arquitectura Detallada.md  Estado Actual del Sistema.md  Examen de Validacion U-CogNet.txt  MycoNet_Integration_Report.md  Pasos Detallados de Implementacion.md  README.md  Registro de Desarrollo Postdoctoral.md  Roadmap de Implementacion.md  Trazabilidad Cognitiva.md  Vista global de la estructura.txt
examples/: audio_visual_demo.py
mathematics_learning_results/: mathematics_learning_results.json
results/: integration_test_results.json  (+2 more)
(+144 files in other folders)
