[tool.poetry]
name = "ucognet"
version = "0.1.0"
description = "Sistema Cognitivo Artificial Universal"
authors = ["AGI U-CogNet <agi@ucognet.com>"]

[[tool.poetry.packages]]
include = "ucognet"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
numpy = "^1.24"
opencv-python = "^4.8"
ultralytics = "^8.0"
mediapipe = "^0.10.0"
pillow = "^10.0"
librosa = {version = "^0.10.0", optional = true}
moviepy = {version = "^1.0.3", optional = true}
scipy = "^1.11.0"
pygame = "^2.6.1"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.0"
seaborn = "^0.13.2"
sympy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"
black = "^23.0"
yt-dlp = "^2023.0"
matplotlib = "^3.10.7"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"